<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/content_view_travel__deals">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/productImage"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@drawable/no_image" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/amt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/amount"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="30sp" />


                <TextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/city"
                    android:textSize="40sp" />


                <TextView
                    android:id="@+id/place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/place"
                    android:textSize="30sp" />


                <TextView
                    android:id="@+id/Desc"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:drawablePadding="10dp"
                    android:inputType="textCapSentences"
                    android:maxLines="10"
                    android:text="@string/description"
                    android:textSize="20sp" />

            </LinearLayout>

        </ScrollView>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>