<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_edit__travel__deals">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/productImage"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/no_image" />
                </RelativeLayout>

                <Button
                    android:id="@+id/productImageBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/btn_login_bg"
                    android:drawableStart="@drawable/photo"
                    android:padding="@dimen/fab_margin"
                    android:text="@string/select_image"
                    android:textColor="@android:color/white" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:hint="@string/city"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/amt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:hint="@string/amount"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:hint="@string/place"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/Desc"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:drawablePadding="10dp"
                        android:hint="@string/description"
                        android:inputType="textCapSentences"
                        android:maxLines="10" />
                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/btn_del"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_login_bg"
                        android:drawableStart="@drawable/ic_delete_forever_black_24dp"
                        android:padding="@dimen/fab_margin"
                        android:text="Delete"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/publish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_update"
                        android:drawableStart="@drawable/ic_outline_save_24pxb"
                        android:padding="@dimen/fab_margin"
                        android:text="Update"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>